# dork

./: CLAUDE.md  blog-rss-plan.md  dork.toml  pyproject.toml
data/: papers.jsonl  runs.jsonl
dork/: __main__.py  config.py  feedback.py  models.py  pipeline.py  store.py
dork/output/: index.py  markdown.py  pr.py
dork/scoring/: embeddings.py  llm.py  reference_set.py
dork/sources/: alphaxiv.py  arxiv.py  base.py  hf_papers.py  rss.py
